meja/tests/if-then-condition-error.stderr
File "tests/if-then-condition-error.meja", line 2, characters 8-9:
Error: Syntax error: ) expected
