meja/tests/if-then-condition-error.meja
let x = {
  if (15i) {
    1i;
  } else {
    2i;
  };
};
